Made the scoring system hidden.
Attempts get messed up after first match.

--- a/Color Game/app.css
+++ b/Color Game/app.css
@@ -52,4 +52,9 @@ i{
     color: aquamarine;
     text-decoration: none;
 }
+#score{
+    font-family: 'Chelsea Market', cursive;
+    color: whitesmoke;
+    visibility: hidden;
+}
 
