--- a/Color Game/app.css
+++ b/Color Game/app.css
@@ -57,4 +57,8 @@ i{
     color: whitesmoke;
     visibility: hidden;
 }
-
+#info{
+    font-family: 'Chelsea Market', cursive;
+    color: whitesmoke;
+    visibility: hidden;
+}
