--- a/Color Game/app.css
+++ b/Color Game/app.css
@@ -62,3 +62,10 @@ i{
     color: whitesmoke;
     visibility: hidden;
 }
+#info a{
+    color: whitesmoke;
+}
+#info a:hover{
+    color: aquamarine;
+    text-decoration: none;
+}
