--- a/jQuery/Todo List Project/assests/CSS/style.css
+++ b/jQuery/Todo List Project/assests/CSS/style.css
@@ -1,4 +1,10 @@
-#mainTodo{
-    width: 40%;
+#todos{
+    width: 360px;
     margin: 0 auto;
+    border: 1px solid grey;
 }
+.completed{
+    color: darkgrey;
+    text-decoration: line-through;
+}
+
